--- a/public/drawmap.html
+++ b/public/drawmap.html
@@ -5,7 +5,10 @@
         <body>               
             <input id="fileInput" type="file" onchange="processFiles()"/>  
             <br>  
-            <canvas id="myCanvas" width="1000" height="600" style="border:1px solid #c3c3c3">your browser does not support the canvas tag </canvas>  
+            <button type="button" onclick="draw1(number)">墨卡托变换</button>
+            <button type="button" onclick="draw2(number)">兰伯特投影变换</button>
+            <br>
+            <canvas id="myCanvas" width="1800" height="1000" style="border:1px solid #c3c3c3">your browser does not support the canvas tag </canvas>  
               
             <script>    
                 function processFiles(){  
@@ -23,7 +26,7 @@
                 }  
                 //提取数字，并存入数组  
                function digitalExtraction(str,number){  
-                    var heap= str.replace(/[^0-9.eEND-]/ig,"A");  
+                    /*var heap= str.replace(/[^0-9.eEND-]/ig,"A");  
                     heap=heap.replace(/[^0-9.eA-]/ig,"L");
   
                     var numcharacter="";//存储数字字符  
@@ -76,6 +79,35 @@
                          character=heap[++flag];  
                     }  
                      
+                    return number;  */
+                    var heap= str.replace(/[^0-9.END]/ig,"A");  
+  
+                    var numcharacter="";//存储数字字符  
+                    var number =new Array();//提取数字数组  
+                    var i=0;  
+                    var flag=0;//heap字符串当前标记  
+                    var n=0;//标识数字与字符转换位置  
+                    var character=heap[flag];//获取字符串的一个字符  
+                   // document.write(heap);  
+                    while(character!=null){  
+                        if(character=="L"){  
+                             number[i++]=-1;  
+                             flag+=3;  
+                             character=heap[flag];  
+                         }  
+                        if(character!="A"){  
+                            n=1;  
+                            numcharacter+=character;  
+                          }  
+                        else{  
+                            if(n){  
+                                number[i++]=parseFloat(numcharacter);  
+                                numcharacter="";  
+                                n=0;  
+                            }  
+                        }  
+                         character=heap[++flag];  
+                    }  
                     return number;  
                }  
                function draw(number){  
@@ -93,7 +125,7 @@
                     for(var i=1,j=0;i<n;i++){  
                         if(number[i]!=-1){  
                             x[j]=number[i]*10;  
-                            y[j]=number[++i]*10;  
+                            y[j]=number[++i]*10; 
                             j++;  
                         }else{  
                             cxt.moveTo(x[0],y[0]);  
@@ -104,6 +136,17 @@
                             j=0;  
                         }  
                     }  
+               }
+               function M(x,y){
+                   var a=6378160;
+                   var b=6356775;
+                   var c=(a*a-b*b)/(b*b);
+                   var k=(a*a/b)/Math.pow(1+c,0.5);
+                   var m=Math.pow((1-2.71828*Math.sin(x))/(1+2.71828*Math.sin(x)),1.3591);
+                   y=k*Math.log(Math.tan(Math.PI/4)*m)
+               }
+               function L(x,y){
+
                }
             </script>     
         </body>    
