--- a/public/地图投影.html
+++ b/public/地图投影.html
@@ -67,7 +67,7 @@ function BJ(){
         A[N]=new Array();
 
         var l=text.length;
-        var judge=0;
+        var judge=0;00
         for(i=1;i<l-1;i++) 
         {   
             
