--- a/public/四叉树.html
+++ b/public/四叉树.html
@@ -8,12 +8,12 @@
 			矩阵为：<br />
             1, 1, 1, 1, 2, 2, 3, 3,<br />
             1, 1, 1, 1, 2, 2, 3, 3,<br />
-            1, 1, 1, 1, 4, 4, 5, 5,<br />
+            1, 1, 1, 1, 04, 4, 5, 5,<br />
             1, 1, 1, 1, 4, 4, 5, 5,<br />
             6, 6, 7, 8,13,13,14,14,<br />
             6, 6, 9,10,13,13,14,14,<br />
-           11,11,12,12,15,16,19,19,<br />
-		        11,11,12,12,17,18,19,19<br />
+            11,11,12,12,15,16,19,19,<br />
+		    11,11,12,12,17,18,19,19<br />
 		   <br />
 	
 		   四叉树四进制编码为： <br />  
@@ -69,28 +69,21 @@
 			}
 		}
 	}
-    for(c1=0;c1<8;c1++)
-	{
-		for(c2=0;c2<8;c2++)
-		{
-			if((c2!=0)&&(c2!=7))
-			{
+    for(c1=0;c1<8;c1++){
+		for(c2=0;c2<8;c2++){
+			if((c2!=0)&&(c2!=7)){
 			   if(mor[c1][c2-1]!=mor[c1][c2]&&mor[c1][c2+1]!=mor[c1][c2])
 			   {
 				   flag2[c1*8+c2]=1;	   
 			   }
 			}
-			if(c2==0)
-			{
-				 if(mor[c1][c2+1]!=mor[c1][c2])
-			   {
+			if(c2==0){
+				 if(mor[c1][c2+1]!=mor[c1][c2]){
 				   flag2[c1*8+c2]=1;
 			   }
 			}
-			if(c2==7)
-			{
-			   if(mor[c1][c2-1]!=mor[c1][c2])
-			   {
+			if(c2==7){
+			   if(mor[c1][c2-1]!=mor[c1][c2]){
 				   flag2[c1*8+c2]=1;
 			   }
 			}
@@ -99,13 +92,10 @@
 	//第一层
     var record=new Array();
 	
-    for(h=0;h<8;h++)
-	{
-		record[h]=new Array();
-		for(l=0;l<8;l++)
-		{
+    for(h=0;h<8;h++){
+			record[h]=new Array();
+			for(l=0;l<8;l++){
 			var result4=i[h][0]*2+j[l][0];
-		
 			record[h][l]=result4;
 		}
 	}
@@ -116,34 +106,33 @@
 		if(flag1[m])
 		{
 			for(c2=countl[m],h=0;h<2;h++)
-					{
-				for(c3=counth[m],l=0;l<2;l++)
-						{
+			{
+				for(c3=counth[m],l=0;l<2;l++){
 				          record[counth[m]+h][countl[m]+l]=record[counth[m]+h][countl[m]+l]*10+i[counth[m]+h][1]*2+j[countl[m]+l][1];
 						}
 					}
 		}
 	}
 	//第三层
-    for(m=0;m<64;m++){
-		
-    if(flag2[m]){
-      var yu1=Math.floor(m/8);
+    for(m=0;m<64;m++)
+	{
+		if(flag2[m]){
+			var yu1=Math.floor(m/8);
 			var yu2=Math.floor(m%8);
 			result5=record[yu1][yu2]*10+i[yu1][2]*2+j[yu2][2];
-      record[yu1][yu2]=result5;
+			record[yu1][yu2]=result5;
       }
 	}
 	document.write("<br>");
 	document.write("合并后的四叉树编码为："); 
 	document.write("<br>");
     for(h=0;h<8;h++){
-      for(l=0;l<8;l++){
-        document.write("  "+record[h][l]+"  "); 
-	   }
-     document.write("<br>");
-   }
+		for(l=0;l<8;l++){
+			document.write("  "+record[h][l]+"  "); 
+			}
+			document.write("<br>");
+			}
   
-    </script>
-</head> 
+  </script>
+  </head> 
 </body>
