--- a/public/地图符号.html
+++ b/public/地图符号.html
@@ -4,7 +4,19 @@
         <title>symbol</title>
     <body>
             <script type="text/javascript"></script>
-        <div>
+            <style>
+               #string{  
+              margin:0px auto;  
+              width:300px;  
+              height:300px;  
+              background-color:white;  
+              text-align:center; /* 文字居中 */  
+              font-size:16px; /* 文字大小 */  
+              color:black; /* 文字颜色 */  
+          }  
+            </style>
+         
+        <div id="string">
             <input type="file" id="filepick">
             <input type="button" value="显示线" onclick="readwrite()">
             <input type="button" value="显示点" onclick="xianshidian()">
@@ -12,8 +24,8 @@
           
             </div>
             <div class="bg-right">
-                <canvas id="cname" width="300px" height="300px"style="border: 2px solid black;"></canvas>
-        </div>    
+                <canvas id="cname" width="300px" height="300px"style="border: 1px solid black;"></canvas>
+            </div>    
         <script type="text/javascript">
 
     var canvas = document.getElementsByTagName('canvas')[0];
