--- a/public/四叉树.html
+++ b/public/四叉树.html
@@ -5,7 +5,8 @@
        
     <body>
 			<script type="text/javascript"></script>
-			矩阵为：<br />
+			
+			原矩阵为：<br />
             1, 1, 1, 1, 2, 2, 3, 3,<br />
             1, 1, 1, 1, 2, 2, 3, 3,<br />
             1, 1, 1, 1, 04, 4, 5, 5,<br />
