--- a/public/矢量转栅格.html
+++ b/public/矢量转栅格.html
@@ -319,13 +319,24 @@
                   cxt.lineWidth = 2;
                   cxt.strokeStyle = "#0000ff"; 
                  // ctx.fillStyle = 'rgba(255,0,0,.3)';                  
-
+                 var a;
+                 var b;
+                 var length;
                   var len=x.length;
                   cxt.beginPath(); 
                   cxt.moveTo(x[0],y[0]-200);
                   for(var i=1;i<len;i++){
-                      cxt.lineTo(x[i],y[i]-200);
-                      //cxt.fillRect(x[i],y[i]-200,2,2);
+                      //cxt.lineTo(x[i],y[i]-200);
+                      cxt.fillRect(x[i],y[i]-200,2,2);
+                      a=(x[i]+x[i-1])/2;
+                      b=(y[i]-200+y[i-1]-200)/2;
+                      length=Math.pow(((a-x[i-1])*(a-x[i-1]) + (b-y[i-1]+200) * (b-y[i-1])+200), 0.5);
+                      while(length>2.82){
+                      cxt.fillRect(a,b,2,2);
+                      a=(a+x[i-1])/2;
+                      b=(b+y[i-1])/2;
+                      length=Math.pow(((a-x[i-1])*(a-x[i-1]) + (b-y[i-1]+200) * (b-y[i-1])+200), 0.5);
+                      }
                   }
                   cxt.stroke();     
                  // ctx.fill();
