--- a/public/矢量转栅格.html
+++ b/public/矢量转栅格.html
@@ -2,7 +2,7 @@
   <html>
       <head>
           <title>
-             构建多边形
+             矢量栅格化
           </title>
       </head>
       
@@ -26,7 +26,7 @@
           <div id="string">
                 <font  face="黑体" color="black" size="5">构建多边形</font>
               <input id="fileInput" type="file" onchange="readwrite()"/><br>
-              <input type="submit" value="构建多边形" onclick="zuozhuan()"/>
+              <input type="submit" value="构建多边形并栅格化" onclick="zuozhuan()"/>
               <input type="button" value="清空" onclick="clearCanvas()">
           </div>
           <div class="container">
